fixed some header mobile-menu animation issues. Was animating the z-index, giving a very jarring jump behind the statistics image whenever it happened.

--- a/css/styles.css
+++ b/css/styles.css
@@ -153,8 +153,7 @@ body {
     position: absolute;
     top: 15%;
     left: 50%;
-    transform: translateX(-50%);
-    z-index: -999;
+    transform: translateX(-50%) scale(0);
     padding: 1rem;
     background-color: hsl(0, 0%, 98%);
     opacity: 0;
@@ -176,7 +175,8 @@ body {
     cursor: pointer;
   }
   .primary-header.active .primary-header__list {
-    z-index: 999;
+    transform: translateX(-50%) scale(1);
+    z-index: 500;
     opacity: 1;
     box-shadow: 0 0 0 10000vw hsla(233, 12%, 13%, 0.5);
   }
@@ -211,7 +211,7 @@ main .list li {
   counter-increment: count;
 }
 main .list .primary-title {
-  height: 2.3rem;
+  min-height: 2.3rem;
   margin-bottom: 0.5rem;
   line-height: 2.3rem;
   font-size: clamp(1rem, 2vw, 1.1rem);
